# Order-Inventory-tutorial

./: .gitignore  .pre-commit-config.yaml  Justfile
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 39cfb94aa583_fix_orders_table_create.py  69170cf52910_id_autogenerate.py  6dedbddda5f7_add_outbox_failed_at.py  80a40c80b137_fix_some_db_issue.py  8bd01c7b5105_add_some_table.py  a1faf38b0c1f_id_autogenerate.py  a3e4580346e8_add_orders_table.py  ca11080dfc5b_index_user_mail.py  cb39e2519c71_id_autogenerate.py  d68513a8194d_create_users.py
apps/api/app/: main.py
apps/api/app/api/: auth.py  deps.py  health.py  orders.py  stats.py
apps/api/app/cache/: order_cache.py  rate_limit.py  redis_client.py
apps/api/app/core/: config.py  errors.py  middleware.py
apps/api/app/db/: __init__.py  deps.py  mongo.py  order_items.py  orders.py  outbox_events.py  refresh_tokens.py  session.py  users.py
apps/api/app/repositories/: auth_repository.py  orders_repository.py  outbox_repository.py
apps/api/app/schemas/: auth.py  order_status.py  orders.py  stats.py
apps/api/app/security/: jwt.py  passwords.py
apps/api/app/services/: auth_service.py  orders_service.py
apps/api/app/streaming/: kafka_producer.py
apps/mongo-writer/: Dockerfile  pyproject.toml
apps/mongo-writer/app/: config.py  consumer.py
apps/outbox-worker/: Dockerfile  pyproject.toml
apps/outbox-worker/app/: config.py  db.py  outbox_repository.py  worker.py
apps/stream-job/: Dockerfile  main.py  pyproject.toml
apps/stream-job/app/: job.py
docs/: agent.md  event-driven-learning-project-v2.md  event-driven-learning-project.md  security-checklist.md
infra/: .env.api.example  .env.mongo-writer.example  .env.outbox-worker.example  docker-compose.yml
(+14 files in other folders)
