[project]
name = "api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.128.0",
    "psycopg[binary]>=3.3.2",
    "pydantic[email]>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyjwt>=2.11.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
    "asyncpg>=0.31.0",
]
