[project]
name = "mongo-writer"
version = "0.1.0"
description = "Kafka -> MongoDB read model writer"
requires-python = ">=3.12"
dependencies = [
    "confluent-kafka>=2.13.0",
    "pydantic-settings>=2.12.0",
    "pymongo>=4.11.0",
]

[project.scripts]
mongo-writer = "app.consumer:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
