[project]
name = "outbox-worker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "confluent-kafka>=2.13.0",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
]

[project.scripts]
outbox-worker = "app.worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
