[project]
name = "stream-job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "apache-flink==1.19.1",
    "protobuf<5",
    "setuptools==68.2.2",
]

[tool.uv.extra-build-dependencies]
apache-beam = ["setuptools==68.2.2"]
apache-flink-libraries = ["wheel==0.41.3"]
